# shop_api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
app/: crud.py  database.py  main.py  models.py  schemas.py
app/domain/: address.py  category.py  delivery.py  entity.py  item.py  member.py  order_item.py  order_status.py  orders.py
app/domain/item/: item.py  item_repository.py
app/domain/member/: member.py  member_repository.py
app/domain/order/: order.py  order_repository.py
app/infrastructure/sqlite/: database.py
app/usecase/: item_service.py  member_service.py  order_service.py
confg/nginx/: default.conf
tests/: database.py  test_crud.py
