[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["Jaesik <joje1283@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.35"
shortuuid = "^1.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
